--- a/assets/scss/variables/_fonts.scss
+++ b/assets/scss/variables/_fonts.scss
@@ -4,11 +4,8 @@
 
 // Primary Font
 
-@import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
 
-// Secondary Font
-
-@import url('https://fonts.googleapis.com/css?family=Amatic+SC:400,700');
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Rajdhani:300,400,500,600,700');
 
 
 $primary-font: 'Rajdhani', sans-serif;
