--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700");
-@import url("https://fonts.googleapis.com/css?family=Amatic+SC:400,700");
+@import url("https://fonts.googleapis.com/css?family=Amatic+SC|Rajdhani:300,400,500,600,700");
 * {
   margin: 0 auto;
   box-sizing: border-box;
@@ -14,7 +13,12 @@ body {
   font-family: "Rajdhani", sans-serif;
   font-weight: 400; }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Amatic SC", sans-serif; }
 
 p {
